M      vollib.c
M      sanlmMex.mexmaci64
M      sanlm_float.c
M      AmapMex.mexw64
M      sanlmMex_noopenmp.mexmaci64
M      sanlmMex_noopenmp.mexa64
M      sanlmMex.mexmaci
M      sanlmMex.mexa64
M      AmapMex.mexglx

Removed a memory leak in sanlm_float.c and vollib.c.
------------------------------------------------------------------------
r374 | gaser | 2010-12-06 11:50:27

M       spm_vbm8.m
M       cg_vbm8_tools.m
A       cg_vbm8_longitudinal_multi_run.m
A       cg_vbm8_longitudinal_multi.m
M       VBM8-Manual.pdf
M       cg_vbm8_longitudinal.m

(1) Added batch for processing longitudinal data for multiple subjects.
(2) Updated VBM8 manual
------------------------------------------------------------------------
r375 | gaser | 2010-12-15 08:15:41

M      cg_sanlm.m
M      cg_spmF2x.m
M      cg_spmT2x.m

Replaced fileparts by spm_fileparts in some files, because the 4th output will
be removed in the future.
------------------------------------------------------------------------
r376 | gaser | 2010-12-15 11:35:34

M      cg_vbm8_defaults.m
M      cg_vbm8_run.m
M      CHANGES.txt
M      tbx_cfg_vbm8.m
M      cg_spmF2x.m
M      cg_vbm8_longitudinal.m
M      cg_vbm8_write.m
M      cg_spmT2x.m

Corrected typo in cg_spmT2x.m and cg_spmF2x.m.
------------------------------------------------------------------------
r377 | gaser | 2010-12-17 13:33:06

M      cg_vbm8_defaults.m
M      cg_vbm8_longitudinal_multi_run.m
M      cg_vbm8_run.m
M      tbx_cfg_vbm8.m
M      cg_spmF2x.m
M      cg_vbm8_longitudinal.m
M      cg_vbm8_write.m
M      cg_spmT2x.m

(1) Added option for defining Dartel template.
(2) Disabled warning for deletion of not found files in 
    cg_vbm8_longitudinal_multi_run.m.
(3) Corrected use of spm_fileparts in cg_spmT2x.m and cg_spmF2x.m.
(4) Refused new longitudinal processing pipeline because no improvement could
    be obtained.

------------------------------------------------------------------------
r377 | gaser | 2010-12-20 16:02:09